--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.Image{
+    background-image: url("public/Hero-image.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    
+}
